# TTS-For-Mute

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: app.rs  main.rs  online_tts.rs  remote_tts.rs  settings.rs  tts_bridge.rs
